--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     }
   ],
   "require": {
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "cloudinary/cloudinary_php": "^3.1"
   },
   "scripts": {
     "database:migrate": "php migrations/Migration.php",
