--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,9 +11,9 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     error_log /var/log/nginx/error.log;
