--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,14 +1,12 @@
-user www-data;
-
 server {
     listen 80;
     server_name localhost;
 
-    root /var/www/public;
+    root /var/www/html/public;
     index index.php index.html;
 
     location / {
-        try_files $uri /index.php?$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -18,6 +16,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    location ~ /\.ht {
+        deny all;
+    }
 }
